@@ -1,3 +1,9 @@
+Thu Jul  4 15:51:56 2013  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* string.c (rb_str_succ): use ONIGENC_MBCLEN_CHARFOUND_P correctly.
+
+	* string.c (rb_str_dump): ditto.
+
 Thu Jul  4 10:04:11 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* regcomp.c (): Merge Onigmo 5.13.5 23b523076d6f1161.
